{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "Touch",
            "id": "5b9381f1-bf5a-4f1a-9e38-6160d3cd3086",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "75a26b56-1bb3-438a-8c71-790b094b63f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "eb8f8cf0-b01b-4956-80c6-5f82e78bae98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "bb6b2827-9a99-4d75-a42f-97535d6c9b29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71b85f41-10aa-4333-8c8c-276ccdd6f836",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "248a6c53-784e-4b14-ab5a-09c439ac9db2",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19403395-4f81-4a73-9b3f-999020c7ce00",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}